target_os="ios"
target_cpu="arm64"
target_environment="device"
ios_deployment_target="12"
ios_enable_code_signing=false
compiler_timing=true
clang_use_chrome_plugins=false
dcheck_always_on=false
enable_rust=false
treat_warnings_as_errors=false
strip_debug_info=true
symbol_level=0
use_custom_libcxx=false
use_rtti=false
use_sysroot=false
is_cfi=false
is_asan=false
is_clang=true
is_component_build=false
is_debug=false
v8_monolithic=true
v8_deprecation_warnings=false
v8_enable_temporal_support=false
v8_imminent_deprecation_warnings=false
v8_use_external_startup_data=false
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_test_features=false
v8_enable_sandbox=false
v8_enable_pointer_compression=true
v8_enable_webassembly=true
v8_enable_drumbrake=true
